--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"Source\\": "source/"
+			"Source\\": "Source/"
 		},
 		"files": [
-			"source/Config.php"
+			"Source/Config.php"
 		]
 	},
 	"require" : {
